java/PitayaClient/src/main/java/dog/tale/pitaya/Pitaya.java

// Targeted by JavaCPP version 1.4.4: DO NOT EDIT THIS FILE

package dog.tale.pitaya;

import java.nio.*;
import org.bytedeco.javacpp.*;
import org.bytedeco.javacpp.annotation.*;

public class Pitaya extends dog.tale.pitaya.PitayaConfig {
    static { Loader.load(); }

// Parsed from pitaya_version.h

public static final int PC_VERSION_MAJOR = 1;
public static final int PC_VERSION_MINOR = 9;
public static final int PC_VERSION_REVISION = 5;
public static final String PC_VERSION_SUFFIX = "";

// Parsed from pitaya.h

/**
 * Copyright (c) 2014 NetEase, Inc. and other Pomelo contributors
 * MIT Licensed.
 */

// #ifndef PC_PITAYA_H
// #define PC_PITAYA_H

// #include <stddef.h>
// #include <stdbool.h>
// #include <stdint.h>

// #ifdef __cplusplus
// #endif

// #ifdef _WIN32
// #define PC_EXPORT __declspec(dllexport)
// #else
// #define PC_EXPORT
// #endif

// #include "pitaya_version.h"

// #define PC_T(x) PC_T2(x)
// #define PC_T2(x) #x

public static final int PC_VERSION_NUM = (PC_VERSION_MAJOR * 10000 + PC_VERSION_MINOR * 100 + PC_VERSION_REVISION);
// #define PC_VERSION_STR ( PC_T(PC_VERSION_MAJOR) "." PC_T(PC_VERSION_MINOR)
//         "." PC_T(PC_VERSION_REVISION) "-" PC_VERSION_SUFFIX )

/**
 * error code
 */
public static final int PC_RC_OK = 0;
public static final int PC_RC_ERROR = -1;
public static final int PC_RC_TIMEOUT = -2;
public static final int PC_RC_INVALID_JSON = -3;
public static final int PC_RC_INVALID_ARG = -4;
public static final int PC_RC_NO_TRANS = -5;
public static final int PC_RC_INVALID_THREAD = -6;
public static final int PC_RC_TRANS_ERROR = -7;
public static final int PC_RC_INVALID_ROUTE = -8;
public static final int PC_RC_INVALID_STATE = -9;
public static final int PC_RC_NOT_FOUND = -10;
public static final int PC_RC_RESET = -11;
public static final int PC_RC_SERVER_ERROR = -12;
public static final int PC_RC_UV_ERROR = -13;
public static final int PC_RC_NO_SUCH_FILE = -14;
public static final int PC_RC_MIN = -15;

@Opaque public static class pc_client_t extends Pointer {
    /** Empty constructor. Calls {@code super((Pointer)null)}. */
    public pc_client_t() { super((Pointer)null); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public pc_client_t(Pointer p) { super(p); }
}
@Opaque public static class pc_request_t extends Pointer {
    /** Empty constructor. Calls {@code super((Pointer)null)}. */
    public pc_request_t() { super((Pointer)null); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public pc_request_t(Pointer p) { super(p); }
}
@Opaque public static class pc_notify_t extends Pointer {
    /** Empty constructor. Calls {@code super((Pointer)null)}. */
    public pc_notify_t() { super((Pointer)null); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public pc_notify_t(Pointer p) { super(p); }
}

/**
 * client state
 */
public static final int PC_ST_INITED = 0;
public static final int PC_ST_CONNECTING = 1;
public static final int PC_ST_CONNECTED = 2;
public static final int PC_ST_DISCONNECTING = 3;
public static final int PC_ST_UNKNOWN = 4;
public static final int PC_ST_COUNT = 5;


/**
 * log level
 */
public static final int PC_LOG_DEBUG = 0;
public static final int PC_LOG_INFO = 1;
public static final int PC_LOG_WARN = 2;
public static final int PC_LOG_ERROR = 3;
public static final int PC_LOG_DISABLE = 4;

/**
 * some tunable arguments
 */
public static final int PC_TRANSPORT_PLUGIN_SLOT_COUNT = 8;
public static final int PC_PRE_ALLOC_REQUEST_SLOT_COUNT = 4;
public static final int PC_PRE_ALLOC_NOTIFY_SLOT_COUNT = 4;
public static final int PC_TIMEOUT_CHECK_INTERVAL = 2;
public static final int PC_HEARTBEAT_TIMEOUT_FACTOR = 2;
public static final int PC_TCP_READ_BUFFER_SIZE = (1 << 16);

/**
 * builtin transport name
 */
public static final int PC_TR_NAME_UV_TCP = 0;
public static final int PC_TR_NAME_UV_TLS = 1;
public static final int PC_TR_NAME_DUMMY = 7;

/**
 * reconnect max retry
 */
public static final int PC_ALWAYS_RETRY = -1;

/**
 * disable timeout
 */
public static final int PC_WITHOUT_TIMEOUT = -1;

/** enum pc_local_storage_op_t */
public static final int
    PC_LOCAL_STORAGE_OP_READ = 0,
    PC_LOCAL_STORAGE_OP_WRITE = 1;
public static class pc_local_storage_cb_t extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    pc_local_storage_cb_t(Pointer p) { super(p); }
    protected pc_local_storage_cb_t() { allocate(); }
    private native void allocate();
    public native int call(@Cast("pc_local_storage_op_t") int op,
        @Cast("char*") BytePointer data, @Cast("size_t*") SizeTPointer len, Pointer ex_data);
}

/**
 * Binary buffer
 */
public static class pc_buf_t extends Pointer {
    static { Loader.load(); }
    /** Default native constructor. */
    public pc_buf_t() { super((Pointer)null); allocate(); }
    /** Native array allocator. Access with {@link Pointer#position(long)}. */
    public pc_buf_t(long size) { super((Pointer)null); allocateArray(size); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public pc_buf_t(Pointer p) { super(p); }
    private native void allocate();
    private native void allocateArray(long size);
    @Override public pc_buf_t position(long position) {
        return (pc_buf_t)super.position(position);
    }

    public native @Cast("uint8_t*") BytePointer base(); public native pc_buf_t base(BytePointer base);
    public native @Cast("int64_t") long len(); public native pc_buf_t len(long len);
}

@NoException public static native @ByVal pc_buf_t pc_buf_empty();
@NoException public static native @ByVal pc_buf_t pc_buf_copy(@Const pc_buf_t buf);
@NoException public static native void pc_buf_free(pc_buf_t buf);
@NoException public static native @ByVal pc_buf_t pc_buf_from_string(@Cast("const char*") BytePointer str);
@NoException public static native @ByVal pc_buf_t pc_buf_from_string(String str);
@NoException public static native void pc_buf_debug_print(@Const pc_buf_t buf);

/**
 * Push
 */
public static class pc_push_handler_cb_t extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    pc_push_handler_cb_t(Pointer p) { super(p); }
    protected pc_push_handler_cb_t() { allocate(); }
    private native void allocate();
    public native void call(pc_client_t client, @Cast("const char*") BytePointer route, @Const pc_buf_t payload);
}

@NoException public static native void pc_client_set_push_handler(pc_client_t client, pc_push_handler_cb_t cb);

public static class pc_client_config_t extends Pointer {
    static { Loader.load(); }
    /** Default native constructor. */
    public pc_client_config_t() { super((Pointer)null); allocate(); }
    /** Native array allocator. Access with {@link Pointer#position(long)}. */
    public pc_client_config_t(long size) { super((Pointer)null); allocateArray(size); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public pc_client_config_t(Pointer p) { super(p); }
    private native void allocate();
    private native void allocateArray(long size);
    @Override public pc_client_config_t position(long position) {
        return (pc_client_config_t)super.position(position);
    }

    public native int conn_timeout(); public native pc_client_config_t conn_timeout(int conn_timeout);

    public native int enable_reconn(); public native pc_client_config_t enable_reconn(int enable_reconn);
    public native int reconn_max_retry(); public native pc_client_config_t reconn_max_retry(int reconn_max_retry);
    public native int reconn_delay(); public native pc_client_config_t reconn_delay(int reconn_delay);
    public native int reconn_delay_max(); public native pc_client_config_t reconn_delay_max(int reconn_delay_max);
    public native int reconn_exp_backoff(); public native pc_client_config_t reconn_exp_backoff(int reconn_exp_backoff);

    public native int enable_polling(); public native pc_client_config_t enable_polling(int enable_polling);

    public native pc_local_storage_cb_t local_storage_cb(); public native pc_client_config_t local_storage_cb(pc_local_storage_cb_t local_storage_cb);
    public native Pointer ls_ex_data(); public native pc_client_config_t ls_ex_data(Pointer ls_ex_data);

    public native int transport_name(); public native pc_client_config_t transport_name(int transport_name);

    public native int disable_compression(); public native pc_client_config_t disable_compression(int disable_compression);
}

public static final int PC_CLIENT_CONFIG_DEFAULT_CONN_TIMEOUT = 30;
public static final int PC_CLIENT_CONFIG_DEFAULT_ENABLE_RECONN = 1;
public static final int PC_CLIENT_CONFIG_DEFAULT_RECONN_MAX_RETRY = PC_ALWAYS_RETRY;
public static final int PC_CLIENT_CONFIG_DEFAULT_RECONN_DELAY = 2;
public static final int PC_CLIENT_CONFIG_DEFAULT_RECONN_DELAY_MAX = 30;
public static final int PC_CLIENT_CONFIG_DEFAULT_RECONN_EXP_BACKOFF = 1;
public static final int PC_CLIENT_CONFIG_DEFAULT_ENABLE_POLLING = 0;
public static final int PC_CLIENT_CONFIG_DEFAULT_TRANSPORT_NAME = PC_TR_NAME_UV_TCP;
public static final int PC_CLIENT_CONFIG_DEFAULT_DISABLE_COMPRESSION = 0;

// #define PC_CLIENT_CONFIG_DEFAULT
// {
//     30, /* conn_timeout */
//     1, /* enable_reconn */
//     PC_ALWAYS_RETRY, /* reconn_max_retry */
//     2, /* reconn_delay */
//     30, /* reconn_delay_max */
//     1, /* reconn_exp_backoff */
//     0, /* enable_polling */
//     NULL, /* local_storage_cb */
//     NULL, /* ls_ex_data */
//     PC_TR_NAME_UV_TCP, /* transport_name */
//     0 /* disable_compression */
// }

@NoException public static native int pc_lib_version();
@NoException public static native @Cast("const char*") BytePointer pc_lib_version_str();

/**
 * If you do use default log callback,
 * this function will change the level of log out.
 *
 * Otherwise, this function does nothing.
 */
@NoException public static native void pc_lib_set_default_log_level(int level);
@NoException public static native int pc_lib_get_default_log_level();

/**
 * pc_lib_init and pc_lib_cleanup both should be invoked only once.
 */
public static class pc_lib_client_info_t extends Pointer {
    static { Loader.load(); }
    /** Default native constructor. */
    public pc_lib_client_info_t() { super((Pointer)null); allocate(); }
    /** Native array allocator. Access with {@link Pointer#position(long)}. */
    public pc_lib_client_info_t(long size) { super((Pointer)null); allocateArray(size); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public pc_lib_client_info_t(Pointer p) { super(p); }
    private native void allocate();
    private native void allocateArray(long size);
    @Override public pc_lib_client_info_t position(long position) {
        return (pc_lib_client_info_t)super.position(position);
    }

    @MemberGetter public native @Cast("const char*") BytePointer platform();
    @MemberGetter public native @Cast("const char*") BytePointer build_number();
    @MemberGetter public native @Cast("const char*") BytePointer version();
}

public static class Pc_log_int_BytePointer extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    Pc_log_int_BytePointer(Pointer p) { super(p); }
    protected Pc_log_int_BytePointer() { allocate(); }
    private native void allocate();
    public native void call(int level, @Cast("const char*") BytePointer msg);
}
